--- a/RAINBOWFLIX.html
+++ b/RAINBOWFLIX.html
@@ -70,38 +70,52 @@
                     </button>
                 </div>
                 <div class="item">          
-                    <button role="button" class="botao-serie">                        
-                            <img class="box-filme" src="img/cronicasdesaofrancisco.jpg" alt="Crônicas de San Francisco">                        
+                    <button role="button" class="botao-serie">  
+                        <a class="item" href="https://www.youtube.com/watch?v=nKOhQ_Ke6vw"target="_blank">
+                            <img class="box-filme" src="img/cronicasdesaofrancisco.jpg" alt="Crônicas de San Francisco"> 
+                        </a>                                    
                     </button>
                 </div>
                 <div class="item">          
                     <button role="button" class="botao-serie">
+                        <a class="item" href="https://www.youtube.com/watch?v=NqpND9A6PHU"target="_blank">
                             <img class="box-filme" src="img/POSE.jpg" alt="POSE">
+                        </a>                   
                     </button>
                 </div>
                 <div class="item">          
                     <button role="button" class="botao-serie">
+                        <a class="item" href="https://www.youtube.com/watch?v=oO4s0iLd8AA"target="_blank">
                             <img class="box-filme" src="img/thelword.jpg" alt="The L Word">
+                        </a>
                     </button>
                 </div>
                 <div class="item">          
                     <button role="button" class="botao-serie">
+                        <a class="item" href="https://www.youtube.com/watch?v=sK-wthQD8Zc"target="_blank">
                             <img class="box-filme" src="img/TWLQG.jpg" alt="The L Word: Generation Q">
+                        </a>
                     </button>
                 </div>
                 <div class="item">          
                     <button role="button" class="botao-serie">
+                        <a class="item" href="https://www.youtube.com/watch?v=yq7gptyu--s"target="_blank">
                             <img class="box-filme" src="img/queereyes.jpg" alt="Queer Eyes">
+                       </a>
                     </button>
                 </div>
                 <div class="item">          
                     <button role="button" class="botao-serie">
+                        <a class="item" href="https://www.youtube.com/watch?v=Hd2ldTR-WpI"target="_blank">
                             <img class="box-filme" src="img/sexeducation.jpg" alt="Sex Education">
+                        </a>
                     </button>
                 </div>
                 <div class="item">          
                     <button role="button" class="botao-serie">
+                        <a class="item" href="https://www.youtube.com/watch?v=hQnL5GFwkfY"target="_blank">
                             <img class="box-filme" src="img/lovevictor.jpg" alt="Love,Victor">
+                        </a>
                     </button>
                 </div>
                                
@@ -115,48 +129,66 @@
             <h2>FILMES</h2>
             <div class="owl-carousel owl-theme">
                 <div class="item">          
-                        <button role="button" class="botao-filme">
+                        <a role="button" class="botao-filme">
+                            <a class="item" href="https://www.youtube.com/watch?v=vjq2FgjpXow"target="_blank"> 
                                 <img class="box-filme" src="img/AGarotaDinamarquesa.jpg" alt="A Garota Dinamarquesa">
+                           </a>
                         </button>
                 </div>
                 <div class="item">          
                     <button role="button" class="botao-filme">
+                        <a class="item" href="https://www.youtube.com/watch?v=EH3zcuRQXNo"target="_blank"> 
                             <img class="box-filme" src="img/CAROL.jpg" alt="Carol">
+                       </a>
                     </button>
                 </div>
                 <div class="item">          
                     <button role="button" class="botao-filme">
+                        <a class="item" href="https://www.youtube.com/watch?v=W8z6Qom72lE"target="_blank"> 
                             <img class="box-filme" src="img/comamorsimon.jpg" alt="Com Amor, Simon">
+                        </a>
                     </button>
                 </div>
                 <div class="item">          
                     <button role="button" class="botao-filme">
+                        <a class="item" href="https://www.youtube.com/watch?v=jbt97-NAQ3Y"target="_blank"> 
                             <img class="box-filme" src="img/ClubedeComprasDallas.jpg" alt="Clube de Compra Dallas">
+                      </a>
                     </button>
                 </div>
                 <div class="item">          
                     <button role="button" class="botao-filme">
+                        <a class="item" href="https://www.youtube.com/watch?v=TmMaUKblWMI"target="_blank"> 
                             <img class="box-filme" src="img/moonlightSobaLuzdoLuar.jpg" alt="Moonlight">
+                        </a>
                     </button>
                 </div>
                 <div class="item">          
                     <button role="button" class="botao-filme">
+                        <a class="item" href="https://www.youtube.com/watch?v=RBi6fwB9GhY"target="_blank"> 
                             <img class="box-filme" src="img/PRIDEOrgulhoeEsperança.jpg" alt="PRIDE: Orgulho e Esperança">
+                        </a>
                     </button>
                 </div>
                 <div class="item">          
                     <button role="button" class="botao-filme">
+                        <a class="item" href="https://www.youtube.com/watch?v=WEpl9BnjlWM"target="_blank"> 
                             <img class="box-filme" src="img/PROM.jpg" alt="PROM">
+                        </a>
                     </button>
                 </div>
                 <div class="item">          
                     <button role="button" class="botao-filme">
+                        <a class="item" href="https://www.youtube.com/watch?v=pADsuuPd79E"target="_blank"> 
                             <img class="box-filme" src="img/TheDeathandLifeofMarshaP.Johnson.jpg" alt="A Morte e a Vida de Marsha P. Johnson">
+                            </a>
                     </button>
                 </div>
                 <div class="item">          
                     <button role="button" class="botao-filme">
+                        <a class="item" href="https://www.youtube.com/watch?v=hQnL5GFwkfY"target="_blank"> 
                             <img class="box-filme" src="img/osegredodeBM.jpg" alt="O Segredo de Brokeback Mountain">
+                        </a>
                     </button>
                 </div>
                                
